Proper crash handling, using logcat and the user's chosen email client to report crashes. Also clean up some old crash handling code and add an uncaught exception handler that crashes natively to get us the native stack trace, because in this project, we probably need that trace.